# ml-workflow

./: .dockerignore  .gitignore  Dockerfile  README.md  dev_requirements.txt  guild.yml  publish.sh  pytest.ini  requirements.txt  setup.cfg  setup.py  setup_template.sh  test_template.sh
.github/workflows/: ci.yml  docker.yml  publish.yml  test.yml
examples/mnist/: .gitignore  README.md  evaluate.py  guild.yml  prepare.py  train.py
recipes/: create_evaluator.py  create_interleaved_datastream.py  create_iterable_sampler.py  create_standard_trainer_validator.py  create_trainer.py  trainer.py
scripts/: guild_tmux.sh
template/: README.md  cookiecutter.json
template/{{cookiecutter.repo_name}}/: README.md  prepare.py  requirements.txt  train.py
template/{{cookiecutter.repository_name}}/: .cz.toml  README.md  dev_requirements.txt  evaluate.py  guild.yml  prepare.py  pytest.ini  requirements.txt  search.py  search_lr.py  setup.cfg  train.py
template/{{cookiecutter.repository_name}}/.github/workflows/: publish.yml  test.yml
template/{{cookiecutter.repository_name}}/operations/: evaluate.py  prepare.py
template/{{cookiecutter.repository_name}}/{{cookiecutter.package_name}}/: __init__.py  log_examples.py  metrics.py  train.py  trainer_setup.py
template/{{cookiecutter.repository_name}}/{{cookiecutter.package_name}}/architecture/: __init__.py  feature.py  model.py  prediction.py  preprocess.py  simple_model.py
template/{{cookiecutter.repository_name}}/{{cookiecutter.package_name}}/data/: __init__.py  augment.py  augmenter.py  datasets.py  gradient_datastream.py
template/{{cookiecutter.repository_name}}/{{cookiecutter.package_name}}/datastream/: __init__.py  augmenter.py  evaluate_datastreams.py  gradient_datastream.py
template/{{cookiecutter.repository_name}}/{{cookiecutter.package_name}}/problem/: __init__.py  datasets.py  evaluate_datasets.py  example.py  settings.py
template/{{cookiecutter.repository_name}}/{{cookiecutter.package_name}}/tools/: __init__.py  text_.py
workflow/: __init__.py  figure_to_numpy.py  setup_project.py  split_new_data.py  temporary_numpy_seed.py  train_test_split.py
workflow/functional/: __init__.py  interleaved.py  repeat_map_chain.py  starcompose.py  structure_map.py
workflow/ignite/: __init__.py  accuracy.py  attach_evaluation_logger.py  attach_lr_warmup.py  attach_output_handlers.py  constants.py  (+15 more)
(+83 files in other folders)
