[metadata]
name = ml-workflow
author = Felix Abrahamsson, Richard Löwenström, Jim Holmström
author-email = richard@aiwizo.com
summary = Workflow tools for pytorch and ignite
project_urls =
    Source Code = https://github.com/codewell/ml-workflow/
license = Apache-2
classifier =
    Development Status :: 3 - Alpha
    Environment :: Other Environment
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
keywords =
    pytorch
    ignite
    workflow
    utilities

[files]
packages =
    workflow

[entry_points]
pbr.config.drivers =
    plain = pbr.cfg.driver:Plain
