[metadata]
name = {{cookiecutter.repository_name}}
author = "Aiwizo"
author-email = user@aiwizo.com
summary = Simple library for converting kw6 files to jpg and providing a dataset api
description-file =
    README.rst
description-content-type = text/x-rst; charset=UTF-8
project_urls =
    Source Code = https://github.com/aiwizo/{{cookiecutter.repository_name}}/
license = Apache-2
classifier =
    Development Status :: 3 - Alpha
    Environment :: Other Environment
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
keywords =
    pytorch

[files]
packages =
    {{cookiecutter.package_name}}

[entry_points]
pbr.config.drivers =
    plain = pbr.cfg.driver:Plain

[options]
python_requires = >=3.6
setup_requires =
    setuptools

[bdist_wheel]
